tests/baselines/reference/decoratorOnClassMethodOverload2(strict=true).errors.txt
decoratorOnClassMethodOverload2.ts(4,5): error TS7010: 'method', which lacks return-type annotation, implicitly has an 'any' return type.


==== decoratorOnClassMethodOverload2.ts (1 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        method()
        ~~~~~~
!!! error TS7010: 'method', which lacks return-type annotation, implicitly has an 'any' return type.
        @dec
        method() { }
    }